--- a/make-your-burger/src/style.scss
+++ b/make-your-burger/src/style.scss
@@ -5,7 +5,14 @@
 	padding: 0;
 }
 
+#app {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
 .main-container {
+	flex: 1;
 	margin: 50px;
 	min-height: 250px;
 }
